tests/NormalTests/paczka1/small_fuzzy/75183423.err
Error in line 5: iXaD6PZ7 A946 85,0
Error in line 6: iXaD6PZ7 A693 19,9
Error in line 7: iXaD6PZ7 S39 92,9
